# encrypted-chat

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  app.js  index.html  nginx.conf  styles.css
src/: chat_server.c  server.c
static/: app.js  styles.css
